Fixed spacing

--- a/source-default.scss
+++ b/source-default.scss
@@ -8,7 +8,7 @@ code.hljs:not([class$='hljs']) {
         display: flex;
 
         padding-top: 2px;
-        padding-left: 7px;
+        padding-left: 0px;
 
         margin-bottom: 0px;
     
